Fixed a bug with the navbar transparency effect on mobile devices

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,18 +1,21 @@
 .navbar {
-    background: transparent;
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.2rem;
-    position: fixed;
-    width: 100vw;
-    top: 0;
-    z-index: 999;
-    transition: backdrop-filter 0.1s ease;
-    backdrop-filter: blur(10px);
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  }
+  background: rgba(0, 0, 0, 0.4); 
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  position: fixed;
+  width: 100vw;
+  top: 0;
+  z-index: 999;
+  transition: backdrop-filter 0.1s ease;
+  
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
   
   .navbar-container {
     z-index: 999;
@@ -94,14 +97,17 @@
     }
   
     .nav-menu.active {
-      background: transparent;
-      backdrop-filter: blur(10px);
-      height: 100vh;
-      left: 0;
-      opacity: 1;
-      transition: all 0.5s ease;
-      z-index: 1;
-    }
+    background: rgba(0, 0, 0, 0.8); 
+    
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    
+    height: 100vh;
+    left: 0;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 1;
+  }
   
     .nav-links {
       text-align: center;
